...
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:enabled="@{!vm.isPlaying}"
                android:fontFamily="@font/cabin_bold"
                android:onClick="@{() -> vm.startPlayback()}"
                android:text="@string/action_start"
                android:textSize="18sp"
                app:icon="@android:drawable/ic_media_play" />

            <Button
                android:id="@+id/btn_stop"
                style="@style/Widget.Material3.Button.TonalButton"
...
